2010-03-09  Abel Cheung  <abelcheung@gmail.com>

	* Rudimentary MIDI support done.
	* wp-scorerender.php:
	- (scorerender_return_fragment_error) Dump command output into
	  error log, instead of on webpage.
	- (scorerender_return_fragment_ok) Add argument, to check for
	  failure during MIDI generation.
	* scorerender-class.php:
	- (set_programs) Rename to set_img_progs().
	- (set_midi_progs) New func.

2010-03-08  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- WP < 2.8 compatibility when calling wp_enqueue_script().
	* notation/guido.php:
	- (conversion_step1) Try verifying retrieved data is really GIF.

2010-03-07  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, scorerender-admin.php:
	- 'Show source' option becomes 'Enable clipboard' option.
	* wp-scorerender.php:
	- (scorerender_return_fragment_ok) Simplify function arguments.
	- Default temp folder and cached image folder is now null.
	- ZeroClipboard functionality can be toggled individually using
	  'clipboard="true/false"' shortcode attribute.  

2010-03-06  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- (render) Returns status instead of file name; image and midi
	  file name are stored inside class properties.
	* wp-scorerender.php:
	- (scorerender_return_fragment_ok) Eliminate unnecessary argument.
	- Provide (ugly) visual feedback after clicking on image.

2010-03-05  Abel Cheung  <abelcheung@gmail.com>

	* misc/jquery.copyable.js:
	- Also fix calling of jQuery for IE (fix for other browsers
	  is already done upon first import)
	* wp-scorerender.php:
	- Fix shortcode being re-evaluated inside output.

2010-03-04  Abel Cheung  <abelcheung@gmail.com>

	* Update ZeroClipboard to newest version (1.0.6).
	* Incorporate jquery.copyable, which transforms ZeroClipboard
	  into jQuery plugin.
	* wp-scorerender.php:
	- Instead of showing music source through showcode.php, now
	  ZeroClipboard flash is directly overlayed onto image.
