@@ -1,3 +1,10 @@
+2010-03-10  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php (scorerender_return_fragment_ok),
+	  scorerender-class.php (render):
+	- Return correct MIDI link.
+	* misc/get-midi.php: New file.
+
 2010-03-09  Abel Cheung  <abelcheung@gmail.com>
 
 	* Rudimentary MIDI support done.
